News Archive introduced.

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -22,7 +22,7 @@ The Openmoko stack, which includes a full X server, allows users and developers 
 * 15/8: [[Debian]] on the FreeRunner [http://n2.nabble.com/Debian-on-the-FreeRunner----now-official-td726410.html announced] (instructions for [http://wiki.debian.org/DebianOnFreeRunner FreeRunner] and [http://wiki.debian.org/DebianOnNeo1973 Neo1973]).
 * 8/8: Openmoko team [http://lists.openmoko.org/pipermail/community/2008-August/025602.html releases] distribution formerly called ASU as [[Om 2008.8]] .
 * 30/7: The FSO distribution releases [http://downloads.openmoko.org/framework/milestone2/ milestone 2] 
-* 25/7: Community helps, [[GPS Problems]] fixed
+* [[News Archive|(news archive)]]<!--Editors: copy removed news to News Archive! -->
 </td>
 <td>
 ===<font color=white>About Openmoko</font>===
