--- a/Debian.mw
+++ b/Debian.mw
@@ -1,5 +1,5 @@
 = Installation =
-There are "official" instructions on how to install Debian on [http://wiki.debian.org/DebianOnFreeRunner FreeRunner] or [http://wiki.debian.org/DebianOnNeo1973 Neo1973], and the [http://lists.linuxtogo.org/pipermail/smartphones-standards/2008-August/000232.html announcement].
+There are "official" instructions on how to install [http://wiki.debian.org/DebianOnFreeRunner Debian on FreeRunner] or [http://wiki.debian.org/DebianOnNeo1973 Debian on Neo1973] (see the [http://lists.linuxtogo.org/pipermail/smartphones-standards/2008-August/000232.html original announcement]).
 
 Previous information (partly outdated, now) on how to install Debian manually has been moved to [[Manual Debian]].
 
