--- a/Debian.mw
+++ b/Debian.mw
@@ -3,6 +3,8 @@ There are "official" instructions on how to install [http://wiki.debian.org/Debi
 
 Previous information (partly outdated, now) on how to install Debian manually has been moved to [[Manual Debian]].
 
+See also : http://www.debian.org/ to know more about Debian.
+
 = System =
 == Password ==
 
