/* Where can I buy the Neo FreeRunner? */ Link was not a link.

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -30,7 +30,7 @@ Absolutely. If your a visual artist, you can help us with icons and other visual
 
 ===Where can I buy the [[Neo FreeRunner]]? ===
 
-www.openmoko.com. We sell both directly and through a growing list of distributors.
+http://www.openmoko.com. We sell both directly and through a growing list of distributors.
 
 ===How much? === 
 
