/* using Bluetooth headset with GSM */

--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -121,6 +121,8 @@ http://opensource.wolfsonmicro.com/~gg/neo1973/gsmheadset.state
 
 ==== using Bluetooth headset with GSM ====
 
+NOTE none of this works with GTA02. Neo mode has disappeared, and none of the state files are GTA02 compatible.
+
 [[Image:WM8753 BlockDiagram GSM Bluetooth.png]]
 
 Headset detection via software
