--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -178,6 +178,8 @@ For example, using a voip app on the phone with a bt voice headset. This would a
 
 See ticket 583 for a state file that should route system audio *out* to the headset. The codec does not allow for duplex system audio connected to a headset, so audio in is still using the mic.
 
+NOTE the state file specified does not work for GTA02, and even when modified to be GTA02 compatible still does not route system sound to a BT headset.
+
 === Multimedia ===
 
 ==== sound playback to speakers ====
