*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Milan.mw
+++ b/Openmoko_Local_Groups:_Milan.mw
@@ -36,13 +36,19 @@
 |
 |
 |-
--
 |[[User:m0nt0|m0nt0]]
 |Linux, gentoo, C, java, python, asm, perl,..
 |application development
 |Erba (CO)
 |
 |
+|-
+|[[User:Danz|Danz]]
+|Linux, C++, C
+|Application development
+|Genova (GE)
+|
+|[[Image: Moko.jpg|center]]
 |-
 |...
 |
