--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -172,8 +172,8 @@ http://opensource.wolfsonmicro.com/~gg/bluetooth-pcm/bluetooth_pcm.c
 http://opensource.wolfsonmicro.com/~gg/neo1973/gsmbluetooth.state
 
 NOTE this will not work with GTA02, as the control numbers have changed
-Here [[http://wiki.openmoko.org/images/6/64/Gsmbluetooth_gta02.state.txt]] is a modified version that is GTA02 compatible, 
-But lacks the new mode settings which disappeared on GTA02, and does not seem to work.
+Here [http://wiki.openmoko.org/images/6/64/Gsmbluetooth_gta02.state.txt] is a modified version that is GTA02 compatible, 
+But lacks the Neo Mode settings which disappeared on GTA02, and does not seem to work.
 
 === Bluetooth headset with system audio ===
 
