*Empty MediaWiki Message*

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3489,8 +3489,7 @@ Willing to re-ship within the UK.
 
 ==== London ====
 
-Status : 13/10
-
+Status : 14/10
 
 * aled <br /> [http://wiki.openmoko.org/wiki/Special:Emailuser/aled Contact]
 * Robert Piasek (actually in Southampton)<br />  [http://wiki.openmoko.org/wiki/Special:Emailuser/Queen6 Contact]
@@ -3505,6 +3504,7 @@ Status : 13/10
 * Rob Paulson (Derby, but will be visiting London in July) [http://wiki.openmoko.org/wiki/Special:Emailuser/Myfanwy Contact]
 * Mario <br /> [http://wiki.openmoko.org/wiki/Special:Emailuser/Spirer Contact]
 * David Pottage (actually in Reading)<br /> [http://wiki.openmoko.org/wiki/Special:Emailuser/chrestomanci Contact]
+* James Tait (Derby, but willing to pay postage from London) [http://wiki.openmoko.org/wiki/Special:Emailuser/jayteeuk Contact]
 
 ==== West Midlands ====
 Status : 3/10
