*Empty MediaWiki Message*

--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -1,3 +1,16 @@
+==Openmoko開放手機軟體發展技術訓練課程==
+開放手機平臺熱潮在開發者社群與校園燃燒。Openmoko是基於Linux與自由軟體（Free Software）的開放手機平臺，同時也是全世界第一個真正100%開放的手機平臺，Openmoko目前已釋出完整的GSM+GPS手機（Neo FreeRunner）、手機軟體平臺、開發環境、電路圖及機構設計，相當適合使用於教學與研究用途。
+
+Openmoko為Linux開放式手機，使用者可自由地將自己的服務創意具體實現在手機上。本基礎訓練課程主要在提供學校老師與同學瞭解Openmoko基本架構、手機軟體開發環境、及應用程式等技術，協助老師順利將開放手機平臺使用在嵌入式系統相關課程，並使用Openmoko手機發展GSM與GPS應用。
+
+敬邀老師帶著您的學生一起參加。更多有關Openmoko開放手機的資訊請參考：http://wiki.openmoko.org/wiki/Main_Page/zh_tw 
+時間：97 年 9月10日（星期三）
+地點：中央大學通訊工程學系 E1-101 會議室
+主辦單位：
+-  Openmoko
+- 國立中央大學通訊工程學系
+
+
 ==訓練課程-2008/08/09-新竹==
 
 Openmoko 一直致力於推動台灣地區的手機軟體教育計畫，九十七學年度開始 Openmoko 將與台灣地區多所學校合作，將 Openmoko 平臺以及 Neo FreeRunner 導入學校課程。負責台灣地區市場行銷的 Jollen Chen 於 8/9 (六) 至清華大學自強基金會進行 Openmoko 體驗式的教育訓練，此訓練使用了即將釋出給學校使用的 Openmoko 教材。現場帶領 40 名業界朋友，實際體驗 Free Your Phone 的理念。現場反應相當熱絡。在這裡提供當天進行訓練的教材，對 Neo FreeRunner 有興趣的朋友請不吝指教。
