/* Openmoko開放手機軟體發展技術訓練課程 */

--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -3,13 +3,19 @@
 
 Openmoko為Linux開放式手機，使用者可自由地將自己的服務創意具體實現在手機上。本基礎訓練課程主要在提供學校老師與同學瞭解Openmoko基本架構、手機軟體開發環境、及應用程式等技術，協助老師順利將開放手機平臺使用在嵌入式系統相關課程，並使用Openmoko手機發展GSM與GPS應用。
 
-敬邀老師帶著您的學生一起參加。更多有關Openmoko開放手機的資訊請參考：http://wiki.openmoko.org/wiki/Main_Page/zh_tw 
-時間：97 年 9月10日（星期三）
-地點：中央大學通訊工程學系 E1-101 會議室
-主辦單位：
--  Openmoko
-- 國立中央大學通訊工程學系
+敬邀老師帶著您的學生一起參加。
 
+更多有關Openmoko開放手機的資訊請參考：http://wiki.openmoko.org/wiki/Main_Page/zh_tw 
+
+時間：97 年 9月10日（星期三）
+
+地點：中央大學通訊工程學系 E1-101 會議室
+
+主辦單位：
+
+-  Openmoko
+
+- 國立中央大學通訊工程學系
 
 ==訓練課程-2008/08/09-新竹==
 
