--- a/Orrery.mw
+++ b/Orrery.mw
@@ -57,10 +57,10 @@ symbolic representations of the solar system objects.
 
 The constellations are plotted in three colors.  The twelve zodiac
 colors are plotted in hot pink.  The constellations plotted in
-yellow are the classical Greek constellations, as listed in Ptolomy's
+gold are the classical Greek constellations, as listed in Ptolomy's
 Almagest.  The only constellation from the Almagest which is not
 plotted is Argo Navis, which is not one of the official modern
-constellations.   The remaining constellations, plotter in blue, where
+constellations.   The remaining constellations, plotted in blue, where
 added during the last few hundred years.
 
 In addition to constellation names and figures, the Celestial Equator 
