--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -66,6 +66,8 @@ Detailed answer:
  5. rm -rf ~/.e/e/config/illume (Purge E's cache)
  6. /etc/init.d/xserver-nodm restart (Restart X)
 
+Then switch keyboard from "None" to "Default" in Illume's preferences.
+
 === How to turn off the Qtopia keyboard ? ===
 
 Short answer: Add the line ''export QTOPIA_NO_VIRTUAL_KEYBOARD=1'' into the file ''/etc/X11/Xsession.d/89qtopia''.
