--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -145,6 +145,8 @@ This program just rotates the screen according to the position of the Neo FreeRu
 '''[[Thumbtribes]]'''<br>
 Low bandwidth distance calculation daemon.
 
+[[Video Player]]
+
 [[Category:Applications]]
 [[Category:Openmoko]]
 [[Category:Community]]
