--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -146,7 +146,7 @@ This program just rotates the screen according to the position of the Neo FreeRu
 Low bandwidth distance calculation daemon.
 
 [[Video Player]]
-
+It plays mpeg-4 320x240 stretched fullscreen, however other formats will require transcoding. 
 [[Category:Applications]]
 [[Category:Openmoko]]
 [[Category:Community]]
