--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -145,7 +145,8 @@ This program just rotates the screen according to the position of the Neo FreeRu
 '''[[Thumbtribes]]'''<br>
 Low bandwidth distance calculation daemon.
 
-[[Video Player]]
+'''[[Video Player]]'''
+
 It plays mpeg-4 320x240 stretched fullscreen, however other formats will require transcoding. 
 [[Category:Applications]]
 [[Category:Openmoko]]
