/* How to change the keyboards layout ? */ Name illume-keyboard-terminal package

--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -76,6 +76,9 @@ Warning: Even when you install another keyboard, if you do not turn off the Qtop
 
 TBD
 
+For illume: Install ''illume-keyboard-terminal'' package :) they are all recommended ones
+for illume.
+
 === How to change the dictionary used by the predictive keyboards ? ===
 
 The dictionary for the "standard" (qtopia) predictive keyboard is stored in ''/opt/Qtopia/etc/dict/<LANG>/words.dawg''. To change it, compile with ''dawgen'' an ispell dictionary (list of words) and replace the en-US words file. You can find an x86 binary ''dawgen'' executable  [http://www.3v1n0.net/openmoko/qtopia-italian-keyboard.tar.bz2 here].
