--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -5,17 +5,13 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
 === Before beginning ===
 
-* Download the FSO/SHR ''Makefile'' and ''common'' directory from [http://shr.bearstech.com/ Bearstech] (see README for details). In the future, the necessary files will be automatically downloaded by the ''Makefile'', by now, you can use this simple [http://hacks-galore.org/aleix/files/scripts/get-shr.sh script] to download all files (including the ''Makefile''. ''wget'' is required, edit it to fulfill your needs), type:
+* Download the FSO/SHR ''Makefile'' from [http://shr.bearstech.com/ Bearstech] (see README for details):
 
- $ . get-shr.sh
+ $ wget http://shr.bearstech.com/Makefile
 
-* Change this line in ''common/setup-env'':
+* Run:
 
- export BBPATH="${TOPDIR}:${TOPDIR}/openembedded:${TOPDIR}/bitbake"
-
-for:
-
- export BBPATH="${TOPDIR}:${TOPDIR}/shr/openembedded:${TOPDIR}/openembedded:${TOPDIR}/bitbake"
+ $ make setup
 
 === Set up your local.conf ===
 
