*Empty MediaWiki Message*

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -10,7 +10,7 @@ Some Frequently Asked Questions for new owners are featured in the [[FAQ#Getting
 </p>
 
 ! style="background:#fcfcfc; width:25% " |
-[[Image:FreeRunner box.png|200px|thumb|Neo FreeRunner Package]]
+[[Image:Freerunner box.png|200px|thumb|Neo FreeRunner Package]]
 |}
 {{Neo FreeRunner Menu}}
 
