--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -13,6 +13,14 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
  $ make setup
 
+* Change this line in ''common/setup-env'':
+
+ export BBPATH="${TOPDIR}:${TOPDIR}/openembedded:${TOPDIR}/bitbake"
+
+for:
+
+ export BBPATH="${TOPDIR}:${TOPDIR}/shr/openembedded:${TOPDIR}/openembedded:${TOPDIR}/bitbake"
+
 === Set up your local.conf ===
 
 Before building the image, you might want to update ''conf/local.conf'' (under ''shr-unstable'' in the top directory) to speed up the building process with:
