--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -7,7 +7,7 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
 * Download the FSO/SHR ''Makefile'' from [http://shr.bearstech.com/ Bearstech] (see README for details):
 
- $ wget http://shr.bearstech.com/Makefile
+ $ wget <nowiki>http://shr.bearstech.com/Makefile</nowiki>
 
 * Run:
 
