--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -8,7 +8,7 @@ Om 2008.8 uses Qtopia for its phone stack. Qtopia has a build-in keyboard primar
 
 === Qtopia keyboard ===
 
-The [[Om2008.8_Keyboard|Qtopia keyboard]] build-in Om 2008.8. See also the [[http://doc.trolltech.com/qtopia4.3/inputmethods-description.html documentation at Trolltech]]
+The [[Om2008.8_Keyboard|Qtopia keyboard]] build-in Om 2008.8. See also the [http://doc.trolltech.com/qtopia4.3/inputmethods-description.html documentation at Trolltech]
 
 [[Image:asu_keyboard_lower.png|none|thumb|250px|ASU Keyboard]] [[Image:asu_keyboard_word.png|none|thumb|250px|ASU Keyboard with hello]] [[Image:asu_keyboard_numeric.png|none|thumb|250px|ASU Keyboard with numeric keys]]
 
