--- a/Keyboard_Debate.mw
+++ b/Keyboard_Debate.mw
@@ -20,6 +20,8 @@ The [[Switching_Keyboards_on_OM_2007.2#What_does_the_keyboard_look_like.3F|match
 
 The illume virtual keyboard a.k.a. Raster's keyboard.
 
+[[Image:Illume-Keyboard-Screenshot.png]]
+
 Probably [http://monochromementality.com/data/phoo/2008_08_05/medium/Screenshot-9.png looking like this] or [http://52grad.de/.stuff/freerunner/screenshots/illume_keyboard.png like that].
 
 See also [[Illume#Virtual_Keyboard]] (which would need to be completed ;)
