--- a/SHR_Development.mw
+++ b/SHR_Development.mw
@@ -13,6 +13,8 @@ There is a new (much simpler) way to build SHR that is under construction right 
 
  $ make setup
 
+make setup will download FSO, bitbake and SHR in the shr directory (SHR root directory from now on).
+
 * Change this line in ''common/setup-env'':
 
  export BBPATH="${TOPDIR}:${TOPDIR}/openembedded:${TOPDIR}/bitbake"
