--- a/Backup.mw
+++ b/Backup.mw
@@ -99,7 +99,7 @@ On the device:
  mount /dev/root /var/tmp/root
 
 On your workstation:
- ssh root@192.168.0.202 "mkfs.jffs2 -d /var/tmp/root -e 128 --pad --no-cleanmarkers" | pv -W > rootfs.jffs2
+ ssh root@192.168.0.202 "mkfs.jffs2 -d /var/tmp/root -e 128 --pad --no-cleanmarkers -x lzo" | pv -W > rootfs.jffs2
 (The "| pv -W" is optional, it just gives you something to watch as the bytes fly by.)
 
 On the device:
