/* Backing-up flash images */

--- a/Backup.mw
+++ b/Backup.mw
@@ -24,6 +24,8 @@ You may either :
 
 === Backing-up flash images ===
 
+{{note|Upload support is currently broken - [http://docs.openmoko.org/trac/ticket/676 #676]}}
+
 You will need the [[Dfu-util]] to make a backup of your existing image.
 
 As when [[Flashing_the_Neo_FreeRunner|flashing]], you will need to be in [[Booting_the_Neo_FreeRunner#Log_into_U-Boot_in_the_NOR_Flash|U-Boot in the NOR Flash]]. Log into the NOR uBoot menu and select ''Set console to USB'' (for NRF just stay in NOR uBoot menu, do not select or enter anything). Now you will be able to flash, make backups of your FreeRunner or query the FreeRunner with [[Dfu-util|dfu-util]].  Backup is fairly slow; it took over ten minutes to back up a 247 MB rootfs.
