/* Launch Task Page */

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -146,7 +146,7 @@ See [[Today/2007.2]] for more information about the Today page and customization
 
 [[Image:LaunchTasks.png|right|200px]] This page displays a menu of available applications.  You may choose a category of applications to display to simplify the screen, or choose to display them all.
 
-Current categories are [[PIM Suite]], [[Om_2007.2_Applications|Applications]], [[Games/Om 2007.2|Games]], [[Utilities]], and All.
+Current categories are [PIM Suite], [[Om_2007.2_Applications|Applications]], [[Games/Om 2007.2|Games]], [[Utilities]], and All.
 
 <br clear=all />
 
