--- a/Wiki_statistic_numbers.mw
+++ b/Wiki_statistic_numbers.mw
@@ -1,5 +1,6 @@
 Openmoko uses Google Analytics to get visitor's information. On this page, you can find every kind of wiki statistic numbers.
 ==Auguest, 2008==
+*[[Media:Analytics wiki-1-.openmoko.org 200808 (ExitsReport).pdf|Exit Page]]
 *[[Media:Analytics wiki-1-.openmoko.org 200808 (TopContentReport).pdf|Top 250 contents]]
 *[[Media:Analytics wiki-1-.openmoko.org 200808 (KeywordsReport).pdf|Keyword Report]]
 *[[Media:Analytics wiki-1-.openmoko.org 200808 (GeoMapReport).pdf|Mapoverlay]]
