*Empty MediaWiki Message*

--- a/Wiki_statistic_numbers.mw
+++ b/Wiki_statistic_numbers.mw
@@ -6,9 +6,9 @@ Period :1 Auguest, 2008~31 Auguest, 2008
 *[[Media:Analytics wiki-1-.openmoko.org 200808 (TopContentReport).pdf|Top 250 contents]]
 *[[Media:Analytics wiki-1-.openmoko.org 200808 (KeywordsReport).pdf|Keyword Report]]
 *[[Media:Analytics wiki-1-.openmoko.org 200808 (GeoMapReport).pdf|Mapoverlay]]
-
+*[[Media:Analytics wiki-1-.openmoko.org 200808 (ExitsReport).pdf|Exit page report]]
 ==July, 2008==
-
+Period :1 July, 2008~31 July, 2008
 *[[Media:Top250content.pdf|Top 250 contents]]
 *[[Media:Keyword.pdf|Search Keyword]]
 *[[Media:Exitpage.pdf|Top leaving pages]]
