/* Moscow */ added myself to the groupsales

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1921,11 +1921,16 @@ Due to common customs problems we created google group to discuss how to get tha
 | 0(1)
 | 0(1) (Жду объявления цены)
 |-
-
+| 51. [[Special:Emailuser/PaulFertser|PaulFertser]]
+| Paul
+| 1(P4.4) (i take passshok's place as he decided to wait for the stable SW
+| 0
+| 0
+|-
 
 |Total number:
 |
-| 49
+| 50
 | 11
 | 22
 |}
