/* Reference */ Rename See also, link to list of users repositories page

--- a/Om_2008_Installer.mw
+++ b/Om_2008_Installer.mw
@@ -68,12 +68,14 @@ Changes made to the list of repositories made in '/etc/opkg' will be taken into 
 
  killall packagekitd
 
-== Reference ==
+== See also ==
 [1] Installer project - http://code.google.com/p/om-assassin/
 
 [2] Packagekit project - http://packagekit.org/
 
 [3] Opkg package management - http://wiki.openmoko.org/wiki/Opkg
+
+[4] List of [[Users Repositories]]
 
 [[Category:Applications]]
 [[Category:Om 2008.8]]
