/* How to add a Repository ? */ Link to list of users repositories page. We need a better example, who knows the real ipkg configuration file syntax ?

--- a/Om_2008_Installer.mw
+++ b/Om_2008_Installer.mw
@@ -35,23 +35,19 @@ The Openmoko Installer (Codename: [http://code.google.com/p/om-assassin/ Assassi
 
 == How to add a Repository ? ==
 
-Adding a repository allows the package manager to install softwares beyond those included in the original distribution. More power, but also more risk of breakage.
-
-* If you don't want to add a repository, you can still try to install an application with
+Adding a repository allows the package manager to install softwares beyond those included in the original distribution. More power, but also more risk of breakage.  Never add feeds which are not for your installed distribution base. If you don't want to add a repository, you can still try to install an application with:
 
  opkg url_to_app.ipk
 
-* The community-repository is installed by default in [[Om2008.8 | Om 2008.8]]. 
-
-* If it were not, you could add it by creating a file named 'community-repos.conf'  in the directory '/etc/opkg'  containing this line:
+The community-repository is installed by default in [[Om2008.8 | Om 2008.8]]. Others are listed in the [[Users Repositories]] page. To add a feed, create a file named (for example) 'community-repos.conf'  in the directory '/etc/opkg'  containing this line:
 
  src community-repos http://downloads.openmoko.org/repository/Multiverse/
 
-Changes made to the list of repositories made in '/etc/opkg' will be taken into account when the list of package is refreshed by:
+Changes to the list of repositories made in '/etc/opkg' will be taken into account when the list of package is refreshed by:
 
  opkg update
 
-* Another way to add repositories is to use the package manager itself and install a 'repository package'. Given that no other repository is proposed yet, the status of this functionality is unclear at present. Please edit this paragraph if you have more information.
+Another way to add repositories is to use the package manager itself and install a 'repository package'. Given that no other repository is proposed this way yet, the status of this functionality is unclear at present. Please edit this paragraph if you have more information.
 
 == Features ==
 * '''Installer''' is a specialized GUI front-end of [http://packagekit.org/ Packagekit] over DBus interface.
