/* How to use the repository ? */ repository -> feed

--- a/Community_Repository.mw
+++ b/Community_Repository.mw
@@ -5,7 +5,7 @@ The community repository is the place where independent Neo application develope
 
 == How to use the repository ? ==
 
-This repository is already installed by default in [[Om2008.8 | Om 2008.8]].
+This feed is already installed by default in [[Om2008.8 | Om 2008.8]].
 
 Otherwise, see instructions on the [http://wiki.openmoko.org/wiki/Om_2008.8_Installer installer page]. They involve creating a one line file in the /etc/opkg directory.
 
