--- a/Gestures.mw
+++ b/Gestures.mw
@@ -183,11 +183,11 @@ Try playing with:
  Restart your Neo!
 
 =Use Cases=
-* Mute audio or suspend when screen is facing down; (NO SUPPORT FOR MUTE/UNMUTE AUDIO IN NEO FOR NOW)
-* Go to main menu when shaken; (NO SUPPORT YET)
-* Volume up/down during call when tilting left/right (still unclear); (NO SUPPORT YET)
-* Turning the phone face to the user (not the same as taking it to the ear) to turn on the backlight (BACKLIGHT HAS A BUG, CAN'T BE USED YET)
-* Automatic portrait/landscape switching for the UI (DONE)
+* Mute audio or suspend when screen is facing down; - NO SUPPORT FOR MUTE/UNMUTE AUDIO IN NEO FOR NOW
+* Go to main menu when shaken; - NO SUPPORT YET
+* Volume up/down during call when tilting left/right (still unclear); - NO SUPPORT YET
+* Turning the phone face to the user (not the same as taking it to the ear) to turn on the backlight - BACKLIGHT HAS A BUG, CAN'T BE USED YET
+* Automatic portrait/landscape switching for the UI - <font color="#00FF00">Done</font>
 * Turning the phone screen down to mute sound (and probably turn off the backlight) or hold call
 * Swinging in an O-shape in the air to redial
 * Moving the phone in a firm gesture from one ear to the other to switch between active and held calls
@@ -198,26 +198,15 @@ Try playing with:
 * Stopping e.g. at a traffic light to choose a better time to notify about new messages than while driving
 * Taking off in a plane (should be detectable, but hard to train) to shut down all RF systems
 * Similarly, landing to re-enable RF systems
-
-Vigorous shaking (side to side) while receiving a call could reject it.
-
-A sideways swing (90degres) out of the wrist could mean general 
-Cancel/Esc/Back
-A long swing could close a app (more a arm swing than wrist. Same 
-G-forces but longer time).
-These swing moves could be used on two axis and each in two axis for 
-different usage.
-A firm wrist tilt backside down could mean global OK.
-
-Maybe some basic moves like thsese should have absolute global meaning.
-
-(like left, right, enter, esc)
-
-Mute phone my hitting it on something hard three times with one side.
-
-Face down lying still - lock screen
-Face up lying still - never lock screen
-
+* Vigorous shaking (side to side) while receiving a call could reject it.
+* A sideways swing (90degres) out of the wrist could mean general Cancel/Esc/Back
+* A long swing could close a app (more a arm swing than wrist. Same G-forces but longer time).
+* These swing moves could be used on two axis and each in two axis for different usage.
+* A firm wrist tilt backside down could mean global OK.
+* Maybe some basic moves like these should have absolute global meaning. (like left, right, enter, esc)
+* Mute phone my hitting it on something hard three times with one side.
+* Face down lying still - lock screen
+* Face up lying still - never lock screen
 * holding the moko out & angling the front of it up repeatedly turns up volume
 * angling front down repeatedly turns down volume
 * a set of 5 or 10 standard, easily distinguishable gestures that the user can map to favorite programs
