*Empty MediaWiki Message*

--- a/Debian.mw
+++ b/Debian.mw
@@ -143,6 +143,8 @@ To activate the change and start up X
 = Software =
 == TangoGPS ==
 {{main|TangoGPS}}
+== e-book reader ==
+{{main|FBReader}}
 
 == XFCE ==
 
