--- a/Debian.mw
+++ b/Debian.mw
@@ -36,6 +36,26 @@ and into /etc/apm/resume.d/00sd_idleclk
  echo 0 > /sys/module/glamo_mci/parameters/sd_idleclk 
 These are from -stacy on the community list.
 
+And anotherone from [[User:Morlac|Morlac]]: (more debianish i think ;) <br />
+etc/apm/scripts.d/sd_idleclk and corresponding links in /etc/apm/suspend.d and /etc/apm/resume.d<br />
+(don't forget to chmod +x /etc/apm/scripts.d/sd_idleclk)
+
+ #!/bin/sh
+ SD_IDLECLK="/sys/module/glamo_mci/parameters/sd_idleclk"
+ [ -x "${SD_IDLECLK}" ] || exit 0
+ 
+ case "${1},${2}" in
+ (suspend,*)
+     echo 1 > ${SD_IDLECLK}
+     touch /etc
+     ;;
+ (resume,suspend)
+     echo 0 > ${SD_IDLECLK}
+     ;;
+ esac
+ 
+ exit 0
+
 == Time ==
 
 The default time zone is UTC.  Reconfigure it by running
