--- a/Debian.mw
+++ b/Debian.mw
@@ -42,7 +42,7 @@ etc/apm/scripts.d/sd_idleclk and corresponding links in /etc/apm/suspend.d and /
 
  #!/bin/sh
  SD_IDLECLK="/sys/module/glamo_mci/parameters/sd_idleclk"
- [ -x "${SD_IDLECLK}" ] || exit 0
+ [ -e "${SD_IDLECLK}" ] || exit 0
  
  case "${1},${2}" in
  (suspend,*)
