--- a/Video_Player.mw
+++ b/Video_Player.mw
@@ -140,4 +140,4 @@ let it run a few seconds and insert the given cropping values into this command
  mencoder -dvd-device /path/to/dvd dvd:// -ovc lavc -lavcopts vcodec=mpeg4:vhq:vbitrate=300 -vf crop=xx:xx:xx:xx,rotate=2,scale=-2:320 -oac mp3lame -lameopts br=64:cbr -o output.avi
 This will rotate the video/DVD, scale it and encode it to mpeg4 with a bitrate of 300kBit/s. Works like a charm.
 
-[[Category:Openmoko]]
+[[Category:Om 2007.2]]
