*Empty MediaWiki Message*

--- a/FBReader.mw
+++ b/FBReader.mw
@@ -35,3 +35,7 @@ My suggestion to edit this file like this:
  </toolbar>
 
 After that, FBReader will fit on screen.
+
+[[Image:read-book.png]]
+
+[[Image:library.png]]
