*Empty MediaWiki Message*

--- a/FBReader.mw
+++ b/FBReader.mw
@@ -36,6 +36,7 @@ My suggestion to edit this file like this:
 
 After that, FBReader will fit on screen.
 
-[[Image:read-book.png]]
-
-[[Image:library.png]]
+{|
+[[Image:read-book.png|300px]] |
+[[Image:library.png|300px]]
+|}
