--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -107,7 +107,7 @@ For example, to download tiles of Taipei and store them on the SD card, one can
 om-locations-map-pack -d 0,osm,5,16,121.5,25.0,0.1,0.1 /media/card
 </pre>
 
-Those important are the last four parameter, which gives the region to download.
+Those important are the last four parameters, which give the region to download.
 
 == Turn on logging ==
 For now, nmea logging is off by default. To get nmea log for being used, we can send dbus message after om-locations launched as below:
