--- a/Debian.mw
+++ b/Debian.mw
@@ -37,7 +37,7 @@ and into /etc/apm/resume.d/00sd_idleclk
 These are from -stacy on the community list.
 
 And anotherone from [[User:Morlac|Morlac]]: (more debianish i think ;) <br />
-etc/apm/scripts.d/sd_idleclk and corresponding links in /etc/apm/suspend.d and /etc/apm/resume.d<br />
+etc/apm/scripts.d/sd_idleclk and corresponding link in /etc/apm/event.d<br />
 (don't forget to chmod +x /etc/apm/scripts.d/sd_idleclk)
 
  #!/bin/sh
