--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2109,6 +2109,17 @@ Due to common customs problems we created google group to discuss how to get tha
 | 1 (точно точно куплю)
 |
 |-
+|
+|-
+|
+|-
+| 28. [[Special:Emailuser/Lucky|Lucky]]
+| Lucky
+| 1
+|
+|-
+|
+|-
 |Total number:
 |
 | 22(29?)
