*Empty MediaWiki Message*

--- a/News_Archive.mw
+++ b/News_Archive.mw
@@ -18,4 +18,4 @@ News from the Openmoko Wiki mainpage
 
 === 06/2008 ===
 
-* 27/6: GTA 02 shipping in the  [http://lists.openmoko.org/pipermail/community/2008-June/019943.html material world]
+* 27/6: Neo FreeRunner shipping in the  [http://lists.openmoko.org/pipermail/community/2008-June/019943.html material world]
