--- a/Zagg_Protection_Discount_Number.mw
+++ b/Zagg_Protection_Discount_Number.mw
@@ -7,9 +7,9 @@ Please edit this page, remove the number you used and add "I used this code" in 
 '''When adding your discount code to the list please do so sorted by chronological date expiration''' (normally at the bottom).
 
 Here's the list
+All been used...
 
 
-* nd23bg    (end date: one-time-use, issued on August 23nd)
 
 Also, a 20%-off code . Can be reused.
 
